debut en dessous du slide

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="/css/my-slider.css" />
     <script src="js/ism-2.2.min.js"></script>
-    <title>Document</title>
+    <title>Clinigen clone</title>
   </head>
   <body>
     <header>
@@ -45,11 +45,9 @@
             </nav>
           </div>
           <div class="header_bot_menuleft">
-            <input
-              type="button"
-              value="Find a medicine"
-              id="header_bot_findAMedicine"
-            />
+            <div id="header_bot_findAMedicine">
+             <span>Find a medicine</span>
+          </div>
             <input
               type="button"
               value="Get in touch"
@@ -88,6 +86,11 @@
           </ol>
         </div>
         <p class="ism-badge" id="my-slider-ism-badge"></p>
+      </div>
+      <div class="sousSlider">
+        <div class="sousSlider_L">Pharmaceutical and Biotech companis</div>
+        <div class="sousSlider_M">Healthcare profesionnals</div>
+        <div class="sousSlider_R">Patient groups</div>
       </div>
     </main>
 
