--- a/src/index.html
+++ b/src/index.html
@@ -28,17 +28,21 @@
       <div id="header">
         <div id="header_top">
           <div class="header_top_country">
-            <i class="fas fa-globe"></i><span>Select country</span>
+            <i class="fas fa-globe"></i
+            ><span
+              ><a href="http://index.html">Select country</a
+              ><i class="fas fa-angle-down"></i
+            ></span>
           </div>
           <div class="header_top_menuLeft">
             <nav>
               <ul>
-                <li>About Clinigen</li>
-                <li>Global offices</li>
-                <li>Careers</li>
-                <li>Investors</li>
-                <li>Sustainability</li>
-                <li>Newsroom</li>
+                <li>About Clinigen<i class="fas fa-angle-down"></i></li>
+                <li>Global offices<i class="fas fa-angle-down"></i></li>
+                <li>Careers<i class="fas fa-angle-down"></i></li>
+                <li>Investors<i class="fas fa-angle-down"></i></li>
+                <li>Sustainability<i class="fas fa-angle-down"></i></li>
+                <li>Newsroom<i class="fas fa-angle-down"></i></li>
               </ul>
             </nav>
           </div>
@@ -52,16 +56,16 @@
           <div id="header_bot_menuMiddle">
             <nav>
               <ul>
-                <li>Mission</li>
-                <li>How we can help</li>
-                <li>Product & Services</li>
-                <li>Insights</li>
+                <li><a href="http://index.html">Mission</a></li>
+                <li><a href="http://index.html">How we can help</a></li>
+                <li><a href="http://index.html">Product & Services</a></li>
+                <li><a href="http://index.html">Insights</a></li>
               </ul>
             </nav>
           </div>
           <div class="header_bot_menuleft">
             <div id="header_bot_findAMedicine">
-              <span>Find a medicine</span>
+              <span>Find a medicine<i class="fas fa-angle-down"></i></span>
             </div>
             <input
               type="button"
@@ -145,6 +149,45 @@
       </div>
       <div class="bgGris">
         <div class="lastNews_Titre"><h3>LATEST FROM CLINIGEN</h3></div>
+        <div class="bgGris_listCards">
+          <div class="card">
+            <span class="titre">INSIGHT</span>
+            <img src="/images/Insight.png" alt="" />
+            <div class="card_content">
+              <a href="http://index.html"
+                >FLEXIBLE PACKAGING & LABELLING SOLUTIONS AT SCALE</a
+              >
+            </div>
+            <div class="card_bot">
+              <a href="http://index.html">View all insights</a>
+            </div>
+          </div>
+          <div class="card">
+            <span class="titre">CAREERS / VACANCIES</span>
+            <img src="/images/careers.jpg" alt="" />
+            <div class="card_content">Description</div>
+            <div class="card_bot">
+              <a href="http://index.html">Join our team</a>
+            </div>
+          </div>
+          <div class="card">
+            <span class="titre">RESULTS</span>
+            <img src="/images/card3.png" alt="" />
+            <div class="card_content">Description</div>
+            <div class="card_bot">
+              <a href="http://index.html">Results, Reports and Presentations</a>
+            </div>
+          </div>
+          <div class="card">
+            <span class="titre">CLINIGEN DIRECT</span>
+            <img src="/images/card4.jpg" alt="" />
+            <div class="card_content">Description</div>
+            <div class="card_bot">
+              <a href="http://index.html">Watch video</a>
+            </div>
+          </div>
+        </div>
+        <div>NEXT</div>
       </div>
     </main>
     <footer></footer>
