Add investor section

--- a/src/index.html
+++ b/src/index.html
@@ -147,6 +147,7 @@
           <img src="/images/patient.JPG" alt="" /><a href="">Patient groups</a>
         </div>
       </div>
+
       <div class="bgGris">
         <div class="lastNews_Titre"><h3>LATEST FROM CLINIGEN</h3></div>
         <div class="bgGris_listCards">
@@ -165,7 +166,9 @@
           <div class="card">
             <span class="titre">CAREERS / VACANCIES</span>
             <img src="/images/careers.jpg" alt="" />
-            <div class="card_content">Description</div>
+            <div class="card_content">
+              We’re looking for people who want to make a difference
+            </div>
             <div class="card_bot">
               <a href="http://index.html">Join our team</a>
             </div>
@@ -173,7 +176,9 @@
           <div class="card">
             <span class="titre">RESULTS</span>
             <img src="/images/card3.png" alt="" />
-            <div class="card_content">Description</div>
+            <div class="card_content">
+              Half Year Results for the Six Months Ended 31 December 2020
+            </div>
             <div class="card_bot">
               <a href="http://index.html">Results, Reports and Presentations</a>
             </div>
@@ -181,13 +186,49 @@
           <div class="card">
             <span class="titre">CLINIGEN DIRECT</span>
             <img src="/images/card4.jpg" alt="" />
-            <div class="card_content">Description</div>
+            <div class="card_content">
+              The personal assistant every pharmacist wishes they had.
+            </div>
             <div class="card_bot">
               <a href="http://index.html">Watch video</a>
             </div>
           </div>
         </div>
-        <div>NEXT</div>
+
+        <div class="containt_investor">
+          <div class="containt_investor_titre"><h3>INVESTOR RELATIONS</h3></div>
+          <div class="containt_investor_listCard">
+            <div class="containt_investor_card">
+              <span class="investor_card_titre">PRESS RELEASES</span>
+              <div class="investor_card_containt">
+                Clinigen launches Managed Access Program with BeiGene for
+                zanubrutinib 08 Apr 2021
+              </div>
+              <div class="investor_card_bot">
+                <a href="http://index.html">View all press releases</a>
+              </div>
+            </div>
+            <div class="containt_investor_card">
+              <span class="investor_card_titre">SHARE PRICE</span>
+              <div class="investor_card_containt">861.50 GBp</div>
+              <div class="investor_card_bot">
+                <a href="http://index.html">Share price details</a>
+              </div>
+            </div>
+            <div class="containt_investor_card">
+              <span class="investor_card_titre">INVESTMENT CASE</span>
+              <div class="investor_card_containt">
+                WHAT IS OUR INVESTMENT CASE?
+              </div>
+              <div class="investor_card_bot">
+                <a href="http://index.html">View our Investment Case</a>
+              </div>
+            </div>
+          </div>
+          <div class="investor_btn">
+            <input type="button" value="Visit our investor section for more" />
+          </div>
+        </div>
       </div>
     </main>
     <footer></footer>
