--- a/src/index.html
+++ b/src/index.html
@@ -201,8 +201,22 @@
             <div class="containt_investor_card">
               <span class="investor_card_titre">PRESS RELEASES</span>
               <div class="investor_card_containt">
-                Clinigen launches Managed Access Program with BeiGene for
-                zanubrutinib 08 Apr 2021
+                <p>
+                  <a href="https://index.html" >Clinigen launches Managed Access Program with BeiGene for
+                  zanubrutinib</a><p class="investor_card_date"></br>08 Apr 2021</p>
+                </p>
+              </div>
+              <div class="investor_card_containt">
+                <p>
+                  <a href="https://index.html" >Clinigen to begin supplying Erwinase® in the UK</a>
+                  <p class="investor_card_date"></br>06 Apr 2021</p>
+                </p>
+              </div>
+              <div class="investor_card_containt">
+                <p>
+                  <a href="https://index.html" >Clinigen Joins Decentralized Trials & Research Alliance (DTRA) </a>
+                <p class="investor_card_date"></br>29 Mar 2021</p>
+                </p>
               </div>
               <div class="investor_card_bot">
                 <a href="http://index.html">View all press releases</a>
@@ -210,7 +224,17 @@
             </div>
             <div class="containt_investor_card">
               <span class="investor_card_titre">SHARE PRICE</span>
-              <div class="investor_card_containt">861.50 GBp</div>
+              <div class="investor_card_containt"><p style="font-size:50px;">861.50 <span style="font-size:30px;">GBp</span></p></div>
+              <div class="investor_card_containt">
+                <p>
+                  Change 14.50p 1.73%
+                </p>
+              </div>
+              <div class="investor_card_containt_update">
+                <p>
+                 Last update 12 May 2021 | 17:51
+                </p>
+              </div>
               <div class="investor_card_bot">
                 <a href="http://index.html">Share price details</a>
               </div>
@@ -218,7 +242,9 @@
             <div class="containt_investor_card">
               <span class="investor_card_titre">INVESTMENT CASE</span>
               <div class="investor_card_containt">
-                WHAT IS OUR INVESTMENT CASE?
+                <span class="investor_card_containt_titleInvest"> WHAT IS OUR INVESTMENT CASE?</span>
+               
+                <span class="investor_card_containt_investText">In becoming the trusted global leader in access to medicines, the Group has consistently delivered healthy financial performances and returns. Read more about our Investment Case by clicking on the link below.</span>
               </div>
               <div class="investor_card_bot">
                 <a href="http://index.html">View our Investment Case</a>
@@ -229,6 +255,13 @@
             <input type="button" value="Visit our investor section for more" />
           </div>
         </div>
+      </div>
+
+      <div class="video">
+
+      </div>
+      <div class="ourMission">
+        next
       </div>
     </main>
     <footer></footer>
