fix div sousslider

--- a/src/index.html
+++ b/src/index.html
@@ -134,16 +134,16 @@
         <p class="ism-badge" id="my-slider-ism-badge"></p>
       </div>
       <div class="sousSlider">
-        <div class="sousSlider_L">
+        <div class="sousSlider_L" id="sousSlider_L">
           <img src="/images/valise.JPG" alt="" />
           <a href="">Pharmaceutical and Biotech companies</a>
         </div>
-        <div class="sousSlider_M">
+        <div class="sousSlider_M" id="sousSlider_M">
           <img src="/images/stetoscope.JPG" alt="" /><a href=""
             >Healthcare profesionnals</a
           >
         </div>
-        <div class="sousSlider_R">
+        <div class="sousSlider_R" id="sousSlider_R">
           <img src="/images/patient.JPG" alt="" /><a href="">Patient groups</a>
         </div>
       </div>
@@ -265,5 +265,6 @@
       </div>
     </main>
     <footer></footer>
+    <script src="/src/js/index.js"></script>
   </body>
 </html>
