--- a/src/index.html
+++ b/src/index.html
@@ -57,8 +57,8 @@
             <nav>
               <ul>
                 <li><a href="http://index.html">Mission</a></li>
-                <li><a href="http://index.html">How we can help</a></li>
-                <li><a href="http://index.html">Product & Services</a></li>
+                <li><a href="http://index.html">How we can help<i class="fas fa-angle-down"></i></a></li>
+                <li><a href="http://index.html">Product & Services<i class="fas fa-angle-down"></i></a></li>
                 <li><a href="http://index.html">Insights</a></li>
               </ul>
             </nav>
@@ -135,16 +135,40 @@
       </div>
       <div class="sousSlider">
         <div class="sousSlider_L" id="sousSlider_L">
-          <img src="/images/valise.JPG" alt="" />
+          <div class="div_sv" >
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 827">
+              <path d='M553.9 700.5h-125c-11.5 0-20.8-9.3-20.8-20.8V577H303.9c-11.5 0-20.8-9.3-20.8-20.8V432.6c0-11.5 9.3-20.8 20.8-20.8h104.2V309.1c0-11.5 9.3-20.8 20.8-20.8h125c11.5 0 20.8 9.3 20.8 20.8v102.7h104.2c11.5 0 20.8 9.3 20.8 20.8v123.5c0 11.5-9.3 20.8-20.8 20.8H574.8v102.7c0 11.6-9.3 20.9-20.9 20.9zm-104.1-41.7h83.3V556.1c0-11.5 9.3-20.8 20.8-20.8h104.2v-81.9H553.9c-11.5 0-20.8-9.3-20.8-20.8V329.9h-83.3v102.7c0 11.5-9.3 20.8-20.8 20.8H324.8v81.9H429c11.5 0 20.8 9.3 20.8 20.8v102.7z' class='svg1'>
+              </path>
+              <path d='M895.9 827H104.2C46.7 827 0 780.7 0 723.8V229.7c0-56.9 46.7-103.2 104.2-103.2h791.7c57.4 0 104.1 46.3 104.1 103.2v494.1c0 56.9-46.7 103.2-104.1 103.2zM104.2 168.1c-34.5 0-62.5 27.6-62.5 61.5v494.1c0 33.9 28 61.6 62.5 61.6h791.7c34.5 0 62.5-27.6 62.5-61.6v-494c0-33.9-28-61.5-62.5-61.5H104.2z' class='svg1'>
+              </path>
+              <path d='M637.3 165.2c-11.5 0-20.8-9.3-20.8-20.8V82.6c0-22.6-18.7-40.9-41.7-40.9H408.1c-23 0-41.7 18.4-41.7 40.9v61.8c0 11.5-9.3 20.8-20.8 20.8s-20.8-9.3-20.8-20.8V82.6c0-45.5 37.4-82.6 83.3-82.6h166.7c46 0 83.3 37.1 83.3 82.6v61.8c0 11.5-9.3 20.8-20.8 20.8z' class='svg1'>
+              </path>
+            </svg>
+        </div>
+         <!-- <img src="/images/valise.JPG" alt="" />--->
           <a href="">Pharmaceutical and Biotech companies</a>
         </div>
         <div class="sousSlider_M" id="sousSlider_M">
-          <img src="/images/stetoscope.JPG" alt="" /><a href=""
+          <div class="div_sv">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1129.6">
+              <path d='M881 612.2c-65.7 0-119-52.9-119-117.9s53.4-117.9 119-117.9 119 52.9 119 117.9-53.4 117.9-119 117.9zm0-188.2c-39.4 0-71.4 31.5-71.4 70.3s32 70.3 71.4 70.3c39.4 0 71.4-31.5 71.4-70.3S920.3 424 881 424zM261.9 682.7C117.5 682.7 0 566.5 0 423.7V188.5c0-65 53.4-117.9 119-117.9 13.2 0 23.8 10.7 23.8 23.8s-10.7 23.8-23.8 23.8c-39.4 0-71.4 31.5-71.4 70.3v235.2c0 116.6 96.1 211.4 214.3 211.4s214.3-94.8 214.3-211.4V188.5c0-38.8-32-70.3-71.4-70.3-13.2 0-23.8-10.7-23.8-23.8s10.7-23.8 23.8-23.8c65.6 0 119 52.9 119 117.9v235.2c0 142.8-117.5 259-261.9 259z' class='svg2'>
+              </path>
+              <path d='M357.1 1129.6c-65.6 0-119-52.9-119-117.9V658.9c0-13.1 10.7-23.8 23.8-23.8 13.2 0 23.8 10.7 23.8 23.8v352.8c0 38.7 32 70.2 71.4 70.2 39.4 0 71.4-31.5 71.4-70.2V776.5c0-78 64.1-141.4 142.8-141.4 78.8 0 142.9 63.4 142.9 141.4v141.1c0 38.7 32 70.3 71.4 70.3 39.4 0 71.4-31.5 71.4-70.3V588.3c0-13.2 10.7-23.8 23.8-23.8 13.1 0 23.8 10.7 23.8 23.8v329.3c0 65-53.4 117.9-119 117.9s-119.1-52.9-119.1-117.9V776.5c0-51.7-42.7-93.8-95.2-93.8s-95.2 42.1-95.2 93.8v235.2c.1 65-53.3 117.9-119 117.9zM119 188.8c-13.2 0-23.8-10.7-23.8-23.8V23.8C95.2 10.7 105.9 0 119 0c38.3 0 95.2 25.1 95.2 94.4s-56.9 94.4-95.2 94.4zm23.9-136v83.1c12.1-5.7 23.8-17.4 23.8-41.5 0-24.3-11.8-36-23.8-41.6zm261.9 136c-38.3 0-95.2-25.1-95.2-94.4S366.5 0 404.8 0c13.2 0 23.8 10.7 23.8 23.8v141.1c0 13.2-10.7 23.9-23.8 23.9zM381 52.8c-12.1 5.7-23.8 17.4-23.8 41.5 0 24.3 11.8 36 23.8 41.6V52.8z' class='svg2'>
+              </path>
+            </svg>
+        </div>
+          <a href=""
             >Healthcare profesionnals</a
           >
         </div>
         <div class="sousSlider_R" id="sousSlider_R">
-          <img src="/images/patient.JPG" alt="" /><a href="">Patient groups</a>
+          <div class="div_sv">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1046.1">
+              <path d='M260.9 348.6C165 348.6 87 270.4 87 174.3 87 78.2 165 0 260.9 0s173.9 78.2 173.9 174.3c0 96.1-78 174.3-173.9 174.3zm0-305.1c-71.9 0-130.4 58.7-130.4 130.8S189 305.1 260.9 305.1s130.4-58.7 130.4-130.8S332.8 43.5 260.9 43.5zm86.9 1002.6H173.9c-12 0-21.7-9.7-21.7-21.7V753.3C55.3 691.7 0 569 0 414.1c0-12 9.7-21.7 21.7-21.7H500c12 0 21.7 9.7 21.7 21.7 0 154.8-55.3 277.6-152.2 339.2v271.1c.1 11.9-9.7 21.7-21.7 21.7zm-152.2-43.5h130.5V741c0-7.8 4.2-15 11-18.9 85.2-48.6 135.9-152.3 140.8-286.3h-434c4.9 134.1 55.6 237.8 140.8 286.3 6.8 3.9 11 11.1 11 18.9v261.6zm543.5-654c-95.9 0-173.9-78.2-173.9-174.3C565.2 78.2 643.2 0 739.1 0S913 78.2 913 174.3c0 96.1-78 174.3-173.9 174.3zm0-305.1c-71.9 0-130.4 58.7-130.4 130.8s58.5 130.8 130.4 130.8 130.4-58.7 130.4-130.8S811 43.5 739.1 43.5zm87 1002.6H652.2c-12 0-21.7-9.7-21.7-21.7V828.1H500c-12 0-21.7-9.7-21.7-21.7 0-236.3 119.5-435.9 260.9-435.9S1000 570.1 1000 806.4c0 12-9.7 21.7-21.7 21.7H847.8v196.2c0 12-9.7 21.8-21.7 21.8zm-152.2-43.5h130.4V806.4c0-12 9.7-21.7 21.7-21.7h130.1C949.4 584.8 850.9 414 739.1 414s-210.3 170.8-217 370.6h130.1c12 0 21.7 9.7 21.7 21.7v196.3z' class='svg3'>
+              </path>
+            </svg>
+        </div>
+          <a href="">Patient groups</a>
         </div>
       </div>
 
