video part and css

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
   </head>
 
   <body>
+<!-------------------------- HEADER ---------------------------->
     <header>
       <div id="header">
         <div id="header_top">
@@ -78,6 +79,7 @@
       </div>
     </header>
 
+<!-------------------------- SLIDER ---------------------------->
     <main>
       <div class="container">
         <div class="ism-slider" id="my-slider">
@@ -133,6 +135,8 @@
         </div>
         <p class="ism-badge" id="my-slider-ism-badge"></p>
       </div>
+
+<!-------------------------- SOUS-SLIDER SVG ---------------------------->
       <div class="sousSlider">
         <div class="sousSlider_L" id="sousSlider_L">
           <div class="div_sv" >
@@ -145,7 +149,6 @@
               </path>
             </svg>
         </div>
-         <!-- <img src="/images/valise.JPG" alt="" />--->
           <a href="">Pharmaceutical and Biotech companies</a>
         </div>
         <div class="sousSlider_M" id="sousSlider_M">
@@ -171,7 +174,7 @@
           <a href="">Patient groups</a>
         </div>
       </div>
-
+ <!-------------------------- LAST NEWS ---------------------------->
       <div class="bgGris">
         <div class="lastNews_Titre"><h3>LATEST FROM CLINIGEN</h3></div>
         <div class="bgGris_listCards">
@@ -218,9 +221,11 @@
             </div>
           </div>
         </div>
-
+ <!-------------------------- INVESTOR RELATIONS ---------------------------->
         <div class="containt_investor">
-          <div class="containt_investor_titre"><h3>INVESTOR RELATIONS</h3></div>
+          <div class="containt_investor_titre">
+            <h3>INVESTOR RELATIONS</h3>
+          </div>
           <div class="containt_investor_listCard">
             <div class="containt_investor_card">
               <span class="investor_card_titre">PRESS RELEASES</span>
@@ -280,9 +285,18 @@
           </div>
         </div>
       </div>
-
+ <!-------------------------- VIDEO ---------------------------->
       <div class="video">
-
+        <div class="containerVideo">
+          <div class="containerVideo_UpTitre">
+            <span>Video:</span> Clinigen group
+          </div>
+            <h2>THE CLINIGEN SOLUTION TO CLINICAL TRIAL CLOSURE</h2>
+            <div class="containerVideo_Text">
+              <p>This is what a Managed Access Program looks like with Clinigen - ethical, compliant and patient focused.</p>
+              <input type="btn" value="Play video">
+            </div>
+        </div>
       </div>
       <div class="ourMission">
         next
