let footer and ok

--- a/src/index.html
+++ b/src/index.html
@@ -221,6 +221,7 @@
             </div>
           </div>
         </div>
+      </div>
  <!-------------------------- INVESTOR RELATIONS ---------------------------->
         <div class="containt_investor">
           <div class="containt_investor_titre">
@@ -284,8 +285,8 @@
             <input type="button" value="Visit our investor section for more" />
           </div>
         </div>
-      </div>
- <!-------------------------- VIDEO ---------------------------->
+     
+<!-------------------------- VIDEO ---------------------------->
       <div class="video">
         <div class="containerVideo">
           <div class="containerVideo_UpTitre">
@@ -294,15 +295,84 @@
             <h2>THE CLINIGEN SOLUTION TO CLINICAL TRIAL CLOSURE</h2>
             <div class="containerVideo_Text">
               <p>This is what a Managed Access Program looks like with Clinigen - ethical, compliant and patient focused.</p>
-              <input type="btn" value="Play video">
+              <input type="button" value="Play video">
             </div>
         </div>
       </div>
+<!-------------------------- OUR MISSION ---------------------------->
       <div class="ourMission">
-        next
+        <div class="ourMission_L">
+          <div class="ourMission_L_Title"><span>Our mission is simple</span>
+          <p>RIGHT MEDECINE.
+            <br>
+            RIGHT PATIENT.
+            <br>
+            RIGHT TIME.
+          </p></div>
+          <input type="button" value="Our mission">
+        </div>
+        <div class="ourMission_R">
+          <p>Clinigen’s mission is to deliver the right medicine to the right patient at the right time, to improve the quality of people’s lives around the world. There are only three ways for a patient to ethically access a medicine: through a clinical trial, unlicensed or commercial route and we are the only company to globally manage access across all three routes.</p>
+        </div>
+      </div>
+<!-------------------------- NUMBER ---------------------------->
+      <div class="numberBot">
+        <div class="numberBot_Card">
+          <span class="ppl">1,100+</span>
+          <p>employees across five continents in 14 countries</p>
+        </div>
+        <div class="numberBot_Card"><span class="target">6.4m</span><p>units shipped in the last year</p></div>
+        <div class="numberBot_Card"><span class="pizza">15,000+</span><p>pharmacist relationships across over 100 countries</p></div>
+        <div class="numberBot_Card"><span class="earth">130</span><p>local knowledge in 130 countries across the world</p></div>
+      </div>
+<!-------------------------- TRUST ---------------------------->
+      <div class="ourMission">
+        <div class="ourMission_L">
+          <div class="ourMission_L_Title"><span>Who we are</span>
+          <p>TRUSTED GLOBAL
+            <br>
+          LEADER
+          </p></div>
+          <input type="button" value="Investors">
+        </div>
+        <div class="ourMission_R">
+          <p>Clinigen is a rapidly-growing specialty pharmaceutical and services company with a unique business model dedicated to delivering the right medicine to the right patient at the right time to improve the quality of people’s lives around the world.</p>
+        </div>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer">
+        <div class="footerContaint">
+          <div class="footerContaint_Card_Office">
+            <div class="footerContaint_Card_Title">
+              OUR GLOBAL OFFICES
+            </div>
+            <div class="footerContaint_Card_linkOffices">
+              <ul>
+                <li><a href="">Australia & New Zealand</a></li>
+                <li><a href="">South Africa</a></li>
+                <li><a href="">Mainland Europe</a></li>
+                <li><a href="">United Kingdom</a></li>
+                <li><a href="">Japan</a></li>
+                <li><a href="">United States</a></li>
+                <li><a href="">Singapore</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="footerContaint_Card_Tools">
+            <div class="footerContaint_Card_Title">
+              SITE TOOLS
+            </div>
+          </div>
+          <div class="footerContaint_Card_Medicine">
+            <div class="footerContaint_Card_Title">
+              FIND A MEDICINE
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="/src/js/index.js"></script>
   </body>
 </html>
