--- a/src/index.html
+++ b/src/index.html
@@ -343,26 +343,37 @@
     <footer>
       <div class="footer">
         <div class="footerContaint">
-          <div class="footerContaint_Card_Office">
+          <div class="footerContaint_Card">
             <div class="footerContaint_Card_Title">
               OUR GLOBAL OFFICES
             </div>
-            <div class="footerContaint_Card_linkOffices">
-              <ul>
+              <ul class="footerContaint_Card_link">
                 <li><a href="">Australia & New Zealand</a></li>
-                <li><a href="">South Africa</a></li>
                 <li><a href="">Mainland Europe</a></li>
-                <li><a href="">United Kingdom</a></li>
                 <li><a href="">Japan</a></li>
-                <li><a href="">United States</a></li>
                 <li><a href="">Singapore</a></li>
+                <li><a href="">South Africa</a></li>
+                <li><a href="">United Kingdom</a></li>
+                <li><a href="">United States</a></li>
               </ul>
-            </div>
           </div>
-          <div class="footerContaint_Card_Tools">
+          <div class="footerContaint_Card">
             <div class="footerContaint_Card_Title">
               SITE TOOLS
             </div>
+            <ul class="footerContaint_Card_link">
+              <li><a href="">Stay In Touch</a></li>
+              <li><a href="">AE Reporting</a></li>
+              <li><a href="">Medical enquiries</a></li>
+              <li><a href="">Terms of use</a></li>
+              <li><a href="">Cookies</a></li>
+              <li><a href="">Privacy Policy</a></li>
+              <li><a href="">UK Gender Pay Gap Report</a></li>
+              <li><a href="">Modern Slavery Statement</a></li>
+              <li><a href="">Acces Online</a></li>
+              <li><a href="">Sitemap</a></li>
+              <li><a href="">Consumer Information Obligations</a></li>
+            </ul>
           </div>
           <div class="footerContaint_Card_Medicine">
             <div class="footerContaint_Card_Title">
