Footer and top menu

--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,9 @@
       src="/node_modules/@fortawesome/fontawesome-free/js/solid.js"
     ></script>
     <script
-      defer
-      src="/node_modules/@fortawesome/fontawesome-free/js/fontawesome.js"
-    ></script>
+    defer
+    src="/node_modules/@fortawesome/fontawesome-free/js/fontawesome.js"
+  ></script>
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/my-slider.css" />
     <script src="js/ism-2.2.min.js"></script>
@@ -31,7 +31,7 @@
           <div class="header_top_country">
             <i class="fas fa-globe"></i
             ><span
-              ><a href="http://index.html">Select country</a
+              ><a href="#" id="country">Select country</a
               ><i class="fas fa-angle-down"></i
             ></span>
           </div>
@@ -47,6 +47,14 @@
               </ul>
             </nav>
           </div>
+        </div>
+        <div class="menuCache" id='menuCache'>
+          <ul>
+            <li><a href="http://">Clinigen Autralia</a></li>
+            <li><a href="http://">Clinigen France</a></li>
+            <li><a href="http://">Clinigen Germany</a></li>
+          </ul>
+         
         </div>
         <div id="header_bot">
           <img
@@ -379,11 +387,28 @@
             <div class="footerContaint_Card_Title">
               FIND A MEDICINE
             </div>
-
+            <p>Online services for healthcare professionals</p>
+            <ul>
+              <li><a href="">Hard to find medicines (Clinigen Direct)</a></li>
+              <li><a href="">Managed Access Programs (Cliniport)</a></li>
+              <li><a href="">Clinigen Products</a></li>
+              <li><a href="">Special Obtains</a></li>
+              <li><a href="">Aseptics UK</a></li>
+          </ul>
           </div>
+        </div>
+        <div class="copyright_Logo">
+          <div class="copyrightBy"><span class="copyright">© Copyright 2021 Clinigen Group plz.</span><span class="by"> By Emperor</span></div>
+          
+          <span class="line"></span>
+          <div class="btnSocial">
+            <input type="button" value="" class="twitter">
+            <input type="button" value="" class="vimeo">
+            <input type="button" value="" class="linkedin"></div>
         </div>
       </div>
     </footer>
     <script src="/src/js/index.js"></script>
+    <script src="/src/js/header.js"></script>
   </body>
 </html>
