menu hide and js

--- a/src/index.html
+++ b/src/index.html
@@ -31,33 +31,45 @@
           <div class="header_top_country">
             <i class="fas fa-globe"></i
             ><span
-              ><a href="#" id="country">Select country</a
+              ><a href="javascript:" id="country">Select country</a
               ><i class="fas fa-angle-down"></i
             ></span>
+               <!-------------------------- SOUS MENU COUNTRY ---------------------------->
+               <div class="menuCache" id='menuCache'>
+                 <ul>
+                   <li><a href="http://">Clinigen Autralia</a></li>
+                   <li><a href="http://">Clinigen France</a></li>
+                   <li><a href="http://">Clinigen Germany</a></li>
+                  </ul>
+                </div>
+                <!------------------------------------------------------>
           </div>
           <div class="header_top_menuLeft">
             <nav>
               <ul>
-                <li>About Clinigen<i class="fas fa-angle-down"></i></li>
-                <li>Global offices<i class="fas fa-angle-down"></i></li>
-                <li>Careers<i class="fas fa-angle-down"></i></li>
-                <li>Investors<i class="fas fa-angle-down"></i></li>
-                <li>Sustainability<i class="fas fa-angle-down"></i></li>
-                <li>Newsroom<i class="fas fa-angle-down"></i></li>
+                <li><a href="javascript:" class="menuAbout">About Clinigen<i class="fas fa-angle-down"></i></a>
+                  <!-------------------------- SOUS MENU ABOUT ---------------------------->
+               <div class="menuCache_about">
+                <ul>
+                  <li><a href="http://">About us</a></li>
+                  <li><a href="http://">History</a></li>
+                  <li><a href="http://">Board of Directors</a></li>
+                  <li><a href="http://">Responsible business</a></li>
+                  <li><a href="http://">Optional excellence</a></li>
+                  <li><a href="http://">Our brands</a></li>
+                 </ul>
+               </div>
+               <!------------------------------------------------------></li>
+                <li><a href="javascript:" class="menuAbout">Global offices<i class="fas fa-angle-down"></i></a></li>
+                <li><a href="javascript:" class="menuAbout">Careers<i class="fas fa-angle-down"></i></a></li>
+                <li><a href="javascript:" class="menuAbout">Investors<i class="fas fa-angle-down"></i></a></li>
+                <li><a href="javascript:" class="menuAbout">Sustainability<i class="fas fa-angle-down"></i></a></li>
+                <li><a href="javascript:" class="menuAbout">Newsroom<i class="fas fa-angle-down"></i></a></li>
               </ul>
             </nav>
           </div>
         </div>
-        <!-------------------------- MENU ---------------------------->
      
-        <div class="menuCache" id='menuCache'>
-          <ul>
-            <li><a href="#">Clinigen Autralia</a></li>
-            <li><a href="http://">Clinigen France</a></li>
-            <li><a href="http://">Clinigen Germany</a></li>
-          </ul>
-        </div>
-         <!------------------------------------------------------>
         <div id="header_bot">
           <img
             src="/images/clinigen-logo.png"
