footer ok et 2eme menu
Fini le footer et 3 eme sous menu fait + changement algo en JS pour le switch de menu

--- a/src/index.html
+++ b/src/index.html
@@ -35,11 +35,11 @@
               ><i class="fas fa-angle-down"></i
             ></span>
                <!-------------------------- SOUS MENU COUNTRY ---------------------------->
-               <div class="menuCache" id='menuCache'>
+               <div class="menuCacheCountry" id='menuCacheCountry'>
                  <ul>
-                   <li><a href="http://">Clinigen Autralia</a></li>
-                   <li><a href="http://">Clinigen France</a></li>
-                   <li><a href="http://">Clinigen Germany</a></li>
+                   <li><a href="http://"><img class="flag" src="/images/flagUK.jpg"> </img>Clinigen Autralia</a></li>
+                   <li><a href="http://"><img class="flag" src="/images/flagFR.png"> </img>Clinigen France</a></li>
+                   <li><a href="http://"><img class="flag" src="/images/flagDE.png"> </img>Clinigen Germany</a></li>
                   </ul>
                 </div>
                 <!------------------------------------------------------>
@@ -49,7 +49,7 @@
               <ul>
                 <li><a href="javascript:" class="menuAbout">About Clinigen<i class="fas fa-angle-down"></i></a>
                </li>
-                <li><a href="javascript:" class="menuAbout">Global offices<i class="fas fa-angle-down"></i></a></li>
+                <li><a href="javascript:" class="menuGlobaOffice">Global offices<i class="fas fa-angle-down"></i></a></li>
                 <li><a href="javascript:" class="menuAbout">Careers<i class="fas fa-angle-down"></i></a></li>
                 <li><a href="javascript:" class="menuAbout">Investors<i class="fas fa-angle-down"></i></a></li>
                 <li><a href="javascript:" class="menuAbout">Sustainability<i class="fas fa-angle-down"></i></a></li>
@@ -68,6 +68,19 @@
                 <li><a href="http://">Our brands</a></li>
                </ul>
              </div>
+              <!-------------------------- SOUS MENU GLOBAL OFFICES ---------------------------->
+              <div class="menuCache_globalOffice">
+                <ul>
+                  <li><a href="http://">Australia & New Zealand</a></li>
+                  <li><a href="http://">Mainland Europe</a></li>
+                  <li><a href="http://">Japan</a></li>
+                  <li><a href="http://">Asia</a></li>
+                  <li><a href="http://">South Africa</a></li>
+                  <li><a href="http://">United Kingdom</a></li>
+                  <li><a href="http://">United States</a></li>
+                 </ul>
+               </div>
+               <!------------------------------------------------------>
              <!------------------------------------------------------>
         </div>
      
@@ -277,7 +290,7 @@
             </div>
             <div class="containt_investor_card">
               <span class="investor_card_titre">SHARE PRICE</span>
-              <div class="investor_card_containt"><p style="font-size:50px;">861.50 <span style="font-size:30px;">GBp</span></p></div>
+              <div class="investor_card_containt_SharePrice"><p style="font-size:50px;">861.50 <span style="font-size:30px;">GBp</span></p></div>
               <div class="investor_card_containt">
                 <p>
                   Change 14.50p 1.73%
@@ -417,9 +430,10 @@
           
           <span class="line"></span>
           <div class="btnSocial">
-            <input type="button" value="" class="twitter">
-            <input type="button" value="" class="vimeo">
-            <input type="button" value="" class="linkedin"></div>
+            <a href='javacscript:' class="twitter"><i class="fab fa-twitter"></i></a>
+            <a href='javacscript:' class="vimeo"><i class="fab fa-vimeo-v"></i></a>
+            <a href='javacscript:' class="linkedin"><i class="fab fa-linkedin-in"></i></a>
+          </div>
         </div>
       </div>
     </footer>
