footer et header terminé
reste les menu du header

--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,6 @@
                  </ul>
                </div>
                <!------------------------------------------------------>
-             <!------------------------------------------------------>
         </div>
      
         <div id="header_bot">
@@ -110,7 +109,7 @@
               value="Get in touch"
               id="header_bot_getInTouch"
             />
-            <span><input type="button" value="" id="header_bot_search" /></span>
+            <span class="separateur"></span><input type="button" value="" id="header_bot_search" />
           </div>
         </div>
       </div>
@@ -382,7 +381,7 @@
         <div class="footerContaint">
           <div class="footerContaint_Card">
             <div class="footerContaint_Card_Title">
-              OUR GLOBAL OFFICES
+             <img src="/public/images/point.JPG" alt=""><span> OUR GLOBAL OFFICES</span>
             </div>
               <ul class="footerContaint_Card_link">
                 <li><a href="">Australia & New Zealand</a></li>
@@ -396,7 +395,7 @@
           </div>
           <div class="footerContaint_Card">
             <div class="footerContaint_Card_Title">
-              SITE TOOLS
+              <img src="/public/images/site.JPG" alt=""><span> SITE<br>TOOLS</span>
             </div>
             <ul class="footerContaint_Card_link">
               <li><a href="">Stay In Touch</a></li>
@@ -414,7 +413,7 @@
           </div>
           <div class="footerContaint_Card_Medicine">
             <div class="footerContaint_Card_Title">
-              FIND A MEDICINE
+              <img src="/public/images/find.JPG" alt=""> <span> FIND A MEDICINE</span>
             </div>
             <p>Online services for healthcare professionals</p>
             <ul>
